# Contenedor-de-Aplicaciones

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
agent/: Cargo.toml
agent/src/: config.rs  events.rs  lib.rs  main.rs  models.rs  security.rs  server.rs  services.rs  store.rs  telemetry.rs
agent/src/virtualization/: filesystem.rs  mod.rs  registry.rs  runtime.rs
agent/tests/: api.rs
artifacts/: mem-log-ci-20251113-213900.csv  mem-log-ci-20251113-214010.csv  mem-log-ci-20251113-223025.csv  mem-log-ci-20251113-223127.csv  mem-log-scoped.csv  mem-log-scoped2.csv  mem-log-scoped3.csv  mem-log-ui.csv  mem-log.csv  orbit-panel-sdk-0.1.0.tgz  test-mem-log.csv
cli/: Cargo.toml
cli/src/: main.rs
clients/cli-rs/: Cargo.toml  README.md
clients/cli-rs/.openapi-generator/: FILES
clients/cli-rs/docs/: ApiToken.md  ApiTokenCreated.md  AppInstance.md  AppInstanceEntryPointsInner.md  AppsApi.md  AppsAppIdLaunchPostRequest.md  ConfigResponse.md  ConfigSecurity.md  ConfigSnapshot.md  ConfigSources.md  Container.md  ContainersApi.md  ContainersContainerIdAppsPostRequest.md  ContainersContainerIdSnapshotsPostRequest.md  ContainersPostRequest.md  SecurityApi.md  SecurityStatus.md  SecurityTokensPostRequest.md  Snapshot.md  SnapshotsApi.md  SystemApi.md  SystemInfoGet200Response.md  Task.md  TasksApi.md
clients/cli-rs/examples/: system_config.rs
clients/cli-rs/src/apis/: apps_api.rs  configuration.rs  containers_api.rs  mod.rs  security_api.rs  snapshots_api.rs  system_api.rs  tasks_api.rs
clients/cli-rs/src/models/: _apps__app_id__launch_post_request.rs  _containers__container_id__apps_post_request.rs  _containers__container_id__snapshots_post_request.rs  _containers_post_request.rs  _security_tokens_post_request.rs  _system_info_get_200_response.rs  api_token.rs  api_token_created.rs  app_instance.rs  app_instance_entry_points_inner.rs  config_response.rs  config_security.rs  config_snapshot.rs  config_sources.rs  container.rs  mod.rs  security_status.rs  snapshot.rs  task.rs
clients/panel-sdk/: README.md  package-lock.json  package.json
clients/panel-sdk/.openapi-generator/: FILES
clients/panel-sdk/docs/: ApiToken.md  ApiTokenCreated.md  AppInstance.md  AppInstanceEntryPointsInner.md  AppsApi.md  AppsAppIdLaunchPostRequest.md  ConfigResponse.md  ConfigSecurity.md  ConfigSnapshot.md  ConfigSources.md  Container.md  ContainersApi.md  ContainersContainerIdAppsPostRequest.md  ContainersContainerIdSnapshotsPostRequest.md  ContainersPostRequest.md  SecurityApi.md  SecurityStatus.md  SecurityTokensPostRequest.md  Snapshot.md  SnapshotsApi.md  SystemApi.md  SystemInfoGet200Response.md  Task.md  TasksApi.md
docs/: architecture.md  data-model.md  roadmap.md  sdk.md
docs/api/: events.md  openapi.yaml
panel/: .env.local.example  next.config.ts  package-lock.json  package.json
scripts/: inspect-config.mjs  panel-flow.mjs  profile-tests.ps1  regenerate-sdks.mjs  run-verifications.ps1  smoke.mjs  start-agent.ps1
(+34 files in other folders)
