[package]
name = "orbit_cli_sdk"
version = "0.1.0"
authors = ["OpenAPI Generator team and contributors"]
description = "API REST del agente Orbit para gestionar contenedores portables, instalaciones de aplicaciones y tareas asíncronas. "
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
